# bots/api.py
@@ -1,3 +1,4 @@
+import os
 from typing import Optional
 
 import chartgpt_client
@@ -9,7 +10,7 @@ configuration = chartgpt_client.Configuration(
     # TODO Fetch from environment variable
     host="http://0.0.0.0:8081"
 )
-configuration.api_key["ApiKeyAuth"] = "abc"
+configuration.api_key["ApiKeyAuth"] = os.environ["CHARTGPT_API_KEY"]
 
 
 def ask_chartgpt(question) -> Optional[chartgpt_client.Response]:
@@ -17,11 +18,14 @@ def ask_chartgpt(question) -> Optional[chartgpt_client.Response]:
         api_instance = chartgpt_client.DefaultApi(api_client)
         try:
             api_request_ask_chartgpt_request = chartgpt_client.ApiRequestAskChartgptRequest(
-                prompt=question,
-                # output_type="plotly_chart",
+                messages=[
+                    {
+                        "content": question,
+                        "role": "user",
+                    }
+                ],
                 output_type="any",
                 data_source_url="bigquery/chartgpt-staging/metaquants_nft_finance_aggregator/p2p_and_p2pool_loan_data_borrow",
-                # data_source_url="bigquery/bigquery-public-data/crypto_ethereum"
             )
             api_response = api_instance.api_request_ask_chartgpt(
                 api_request_ask_chartgpt_request
